fixed menu overflow issue

--- a/app/styles/_tom.scss
+++ b/app/styles/_tom.scss
@@ -1,6 +1,7 @@
 .foodPics {
   height: 80em;
   color: $charcoal;
+  margin-top: 5em;
 }
 
 .foodImgList {
